--- a/MeasurementGUI/MeasurementGUI/MeasurementGUI.csproj
+++ b/MeasurementGUI/MeasurementGUI/MeasurementGUI.csproj
@@ -79,5 +79,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="res\zoom.cur" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
