--- a/MeasurementGUI/MeasurementGUI/MeasurementGUI.csproj
+++ b/MeasurementGUI/MeasurementGUI/MeasurementGUI.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -81,6 +82,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="res\zoom.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\zoomout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\zoom.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\home.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
